// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.tsx undefined shop 1`] = `""`;

exports[`Order.tsx render undefined order 1`] = `""`;

exports[`Order.tsx render order without items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Сбереги Мега Маркер
    </span>
    <span
      id="date"
    >
      2022-03-17
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;

exports[`Order.tsx render order items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Alihandro Express
    </span>
    <span
      id="date"
    >
      2022-03-17
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      1
    </div>
    <div
      className="Order-item"
      key="1"
    >
      2
    </div>
    <div
      className="Order-item"
      key="2"
    >
      3
    </div>
  </div>
</div>
`;

exports[`Order.tsx render order undefined date 1`] = `""`;

exports[`Order.tsx render order undefined items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      sample shop
    </span>
    <span
      id="date"
    >
      2022-03-17
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;


